# vat-reconciliation-engine

./: .env.example  .gitattributes  .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: vat_generic.yml
data/sample/: sample_gl_vat_control.csv  sample_purchase_vat_register.csv  sample_sales_vat_register.csv  sample_vat_payments_refunds.csv  sample_vat_return.csv
docs/: demo_notes.md
outputs/sample_vat_recon/: sample_vat_exception_workbook.xlsx
scripts/: run_sample_smoke.py
src/vat_reconciliation_engine/: __init__.py  config_loader.py  exceptions.py  exporter.py  ingestion.py  reconciliation.py  schema.py  tax_code_mapper.py  vat_rules.py
tests/: conftest.py  test_exporter.py  test_ingestion_schema.py  test_reconciliation_smoke.py
